Tests/testZ80AsmCharInc/testZ80ASMCharInc.err
Error at file 'testZ80ASMCharInc.asm' line 17: syntax error
