Tests/testZ80AsmCharInc/testZ80ASMCharInc.sym
loopstart                       = $0000 ; L 
loophere                        = $0002 ; L 
loopin                          = $0009 ; L 
